# examples

./: .gitignore  README.md  examples.sln  pyproject.toml
.github/workflows/: ci.yml
cpp-cmake/: CMakeLists.txt
cpp-cmake/src/: math_utils.cpp  math_utils.h
cpp-cmake/tests/: test_math.cpp
csharp-dotnet/: CSharpExample.csproj
csharp-dotnet/TestResults/TestResults/: nit_results.trx
csharp-dotnet/src/: StringProcessor.cs
csharp-dotnet/tests/: StringProcessorTests.cs
go-api/: go.mod  main.go
go-api/handlers/: users.go  users_test.go
java-gradle/: build.gradle
java-gradle/src/main/java/com/example/: Calculator.java  StringUtils.java
java-gradle/src/test/java/com/example/: CalculatorTest.java
monorepo/: package.json  pnpm-lock.yaml
nextjs-app/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
nextjs-app/src/utils/: formatting.ts  math.ts  validation.ts
nextjs-app/tests/utils/: math.test.ts
python-api/: -  README.md  pyproject.toml
python-api/src/api/services/: auth.py  validators.py
python-api/src/api/utils/: helpers.py
python-api/tests/: conftest.py
python-api/tests/services/: test_auth.py
rust-cli/: Cargo.toml
rust-cli/src/: lib.rs  main.rs
tests/: assertions.py  conftest.py  manifests.py  nit_runner.py
tests/heuristics/: test_config.py  test_docs.py  test_init.py  test_memory.py  test_report.py  test_run.py  test_scan.py  test_watch.py
tests/llm/: test_analyze.py  test_debug.py  test_docs.py  test_drift.py  test_generate.py  test_pick.py
