[project]
name = "nit-integration-tests"
version = "0.0.1"
description = "Integration tests for nit across multiple language stacks"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "heuristics: No LLM needed — fast, deterministic",
    "llm: Requires Ollama LLM — slow, non-deterministic",
]
